<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ComboDemoUsb</string>
    <string name="action_settings">Settings</string>
    <string name="conn">Conn Device</string>
    <string name="tip">Received Message</string>
    <string name="ic">IC Test</string>
    <string name="mag">Mag Test</string>
    <string name="M1">M1 Test</string>
    <string name="id">ID Card</string>
    <string name="sb">社保卡</string>
    <string name="gj">公交卡</string>
    <string name="szf">身份证</string>

</resources>